force-app/main/default/objects/copado__Data_Template__c/copado__Data_Template__c.object-meta.xml
<CustomObject>
    <label>Data Template</label>
    <nameField>
        <label>Data Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>