force-app/main/default/objects/copado__Data_Template__c/fields/copado__Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>copado__Batch_Size__c</fullName>
    <label>Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>