force-app/main/default/objects/copado__Data_Template__c/fields/copado__Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>copado__Filter_Logic__c</fullName>
    <label>Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>