force-app/main/default/objects/copado__Data_Template__c/fields/copado__Template_Source_Org__c.field-meta.xml
<CustomField>
    <fullName>copado__Template_Source_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Source Org</label>
    <referenceTo>copado__Org__c</referenceTo>
    <relationshipLabel>Data Templates</relationshipLabel>
    <relationshipName>Data_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>